--- a/app/templates/developers/plaatsing.hbs
+++ b/app/templates/developers/plaatsing.hbs
@@ -18,4 +18,4 @@ Het kan zeer verwarrend overkomen als de info op de website zelf de widget infor
 <p>De widget is vervolgens de aanvulling daarop.</p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>We streven ernaar om steeds de meest correct info weer te geven. Als je toch een fout zou vinden in de widget kan u deze steeds doorgeven op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+<p>Heb je problemen bij het plaatsen van de widget? Stuur dan een e-mail naar <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a> of bel 011 26 50 30 (Inter).</p>
