--- a/app/templates/get-started.hbs
+++ b/app/templates/get-started.hbs
@@ -15,7 +15,7 @@
                 Zijn de activiteiten toegankelijk?<br>
                 Is er een aanbod op maat?
               </p>
-              <p class="au-c-intro au-u-margin-top-large">Toegankelijk Vlaanderen verzamelt de toegankelijkheidsinformatie en geeft deze uniform weer. Bezoekers kunnen deze betrouwbare informatie eenvoudig raadplegen via de toegankelijkheidswijzer.</p>
+              <p class="au-c-intro au-u-margin-top-large">De toegankelijkheidswijzer verzamelt de informatie over toegankelijkheid en geeft die overal op dezelfde manier weer. Bezoekers vinden deze betrouwbare informatie eenvoudig op de website van het museum.</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium au-u-visible-medium-up">
@@ -27,37 +27,36 @@
         <hr class="au-c-hr au-c-hr--huge">
         <AuContent @skin="large" class="au-u-margin-bottom">
           <h2 class="au-c-heading au-c-heading--3">Een toegankelijkheidswijzer op jouw eigen museumwebsite?</h2>
-          <p>Welke stappen moet ik doorlopen? Wat is nodig om een widget te kunnen tonen op de website? Hoe ga ik aan de slag?</p>
+          <p>Welke stappen moet ik doorlopen? Wat is nodig om een widget te tonen op mijn website? Hoe ga ik aan de slag?</p>
           <ol class="au-c-numbered-list">
             <li class="au-c-numbered-list__item">
-              <p><strong>Stap 1</strong> – Schrijf je museum in.</p>
+              <p><strong>Stap 1</strong> - Schrijf je museum in.</p>
               <ul>
-                <li>Vul het <AuLink @linkRoute="subscribe">Inschrijfformulier</AuLink> in en motiveer waarom we de toegankelijkheidstroeven van jouw museum in de kijker moeten zetten.</li>
+                <li>Vul het <AuLink @linkRoute="subscribe">Inschrijfformulier</AuLink> in en geef aan waarom de toegankelijkheid van jouw museum in de kijker moet staan.</li>
               </ul>
             </li>
             <li class="au-c-numbered-list__item">
-              <p><strong>Stap 2</strong> – Informatie verzamelen en invoeren</p>
-              <p class="au-u-margin-top-tiny">Je kan dit als museum helemaal zelf!</p>
+              <p><strong>Stap 2</strong> - Verzamel informatie en voer die in</p>
               <p class="au-u-margin-top-small">De museumverantwoordelijke:</p>
               <ul>
-                <li>verzamelt de toegankelijkheidsdata met behulp van een praktische online handleiding.</li>
-                <li>voert de toegankelijkheidsdata in de invoerapplicatie in.</li>
-                <li>bevestigt via mail aan Inter dat het dossier klaar is voor validatie.</li>
-                <li>Inter controleert tot slot de ingevoerde data en verzorgt de afwerking van het dossier.</li>
+                <li>verzamelt de toegankelijkheidsdata met behulp van <a class="au-c-link" href="https://assets.vlaanderen.be/image/upload/v1709550607/toegankelijkheidswijzer_DEF_zonder_jaarlijkse_bijdrage_quz4vj.pdf" target="_blank" rel="noreferrer noopener">een praktische online handleiding.</a></li>
+                <li>voert de toegankelijkheidsdata in.</li>
+                <li>bevestigt via mail aan Inter dat het dossier klaar is om na te kijken.</li>
+                <li>Inter controleert de ingevoerde data en werkt het dossier af.</li>
               </ul>
             </li>
             <li class="au-c-numbered-list__item">
-              <p><strong>Stap 3</strong> – Online tonen van de widget</p>
+              <p><strong>Stap 3</strong> - Online tonen van de widget</p>
               <ul>
-                <li>Na validatie door Inter verschijnt  het dossier standaard in <AuLink @linkRoute="buildings">het overzicht van de gebouwen</AuLink>.</li>
-                <li>Je zorgt als museum zelf voor de technische integratie van de widget op de eigen museumwebsite. Hoe je dit doet, lees je in de begeleidende nota over de <AuLink @linkRoute="developers.intro">technische integratie</AuLink>.</li>
+                <li>Nadat Inter het dossier goedkeurde, verschijnt het standaard in <AuLink @linkRoute="buildings">het overzicht van de gebouwen</AuLink>.</li>
+                <li>Je zet als museum zelf de widget op je museumwebsite. Hoe je dit doet, lees je in <AuLink @linkRoute="developers.intro">de begeleidende nota</AuLink>.</li>
               </ul>
             </li>
             <li class="au-c-numbered-list__item">
-              <p><strong>Stap 4</strong> – Nieuwe informatie toevoegen of informatie updaten</p>
+              <p><strong>Stap 4</strong> - Nieuwe informatie toevoegen of informatie updaten</p>
               <ul>
-                <li>Een nieuwe tentoonstelling? Verbeterde toegankelijkheid? Als museumverantwoordelijke kan je op elk moment aanpassingen ingeven in de invoerapplicatie. Zo blijft de informatie op de website steeds actueel en relevant voor bezoekers.</li>
-                <li><strong>Tip:</strong> Breng Inter op tijd op de hoogte van het feit dat er wijzigingen aankomen. Zo kan Inter de validatie van de gegevens inplannen, zodat de nieuwe informatie op het juiste moment ook effectief online komt en zichtbaar wordt op de museumwebsite.</li>
+                <li>Een nieuwe tentoonstelling? Verbeterde toegankelijkheid? Als museumverantwoordelijke geef je zelf aanpassingen in. Zo blijft de informatie op de website actueel en relevant voor bezoekers.</li>
+                <li><strong>Tip:</strong> Wil je info veranderen? Breng Inter vooraf op de hoogte, zodat de nieuwe informatie op het juiste moment online komt.</li>
               </ul>
             </li>
           </ol>
