--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -78,62 +78,34 @@
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Hoe doen we dat?</h2>
               <p class="au-u-margin-top-small">
-                We doen dit door informatie over de toegankelijkheid van publieke locaties te verzamelen in de Toegankelijk Vlaanderen databank.
-              </p>
-              <p>
-                Als eerste product van Toegankelijk Vlaanderen ontwikkelden we <LinkTo @route="widget" class="au-c-link">de Toegankelijkheidswijzer</LinkTo>. Dit is een online toepassing, een widget, die informatie over toegankelijkheid op elke website op dezelfde manier toont. Dit zet niet enkel de toegankelijkheidsinformatie in de verf maar zorgt ook voor herkenbaarheid bij de bezoeker.
+                We verzamelen informatie over de toegankelijkheid van openbare locaties.
               </p>
               <p>Zo:</p>
               <ul class="au-u-margin-top-small">
                 <li>informeren we mensen met een beperking en hun entourage;</li>
-                <li>creëren we bewustzijn over toegankelijkheid bij het brede publiek;</li>
-                <li>moedigen we de verbetering van kwaliteit van de toegankelijkheid in publieke locaties aan.</li>
+                <li>creëren we bewustzijn over toegankelijkheid bij het grote publiek;</li>
+                <li>bieden we beleidsmakers inzicht in de knelpunten op het gebied van toegankelijkheid;</li>
+                <li>moedigen we mensen aan om de kwaliteit van de toegankelijkheid in openbare locaties te verbeteren.</li>
               </ul>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
-            <div class="au-c-youtube-holder">
-              <iframe src="https://www.youtube.com/embed/o9xIJ5qeCjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <p class="au-c-youtube-holder-caption"><LinkTo @route="transcript" class="au-c-link">Lees het tekst transcript van deze video</LinkTo></p>
+            <div class="au-c-image au-c-image--transparent">
+              <img src="/assets/images/roadmap.svg" alt="Illustratie van een smartphone waar meerdere mensen tegelijk blokjes toevoegen aan een applicatie op het scherm">            </div>
           </div>
         </div>
         <hr class="au-c-hr au-c-hr--huge">
         <div class="au-o-grid au-o-grid--middle">
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
-              <h2 class="au-c-heading au-c-heading--3">Pilootfase met 40 Vlaamse musea</h2>
-              <p class="au-u-margin-top-small">Nadat we van start zijn gegaan met de Gentse stadsmusea en historische huizen, wordt het piloottraject uitgebreid met <strong>40 andere Vlaamse musea.</strong> Zij zullen de Toegankelijkheidswijzer binnenkort op hun website integreren.</p>
-              <p>
-                Wil je als Vlaams museum inzetten op toegankelijkheid?<br>
-                Wil je de bezoekers van jouw museum optimaal informeren?
-              </p>
-              <p><strong>Aarzel dan niet en <LinkTo @route="get-started" class="au-c-link">stel je ook kandidaat</LinkTo>.</strong></p>
-              <p>De bedoeling is om de applicatie na de pilootfase open te stellen voor alle Vlaamse musea. Nadien breiden we geleidelijk aan uit naar andere sectoren (zoals restaurants, cafés of openbare toiletten).</p>
-            </AuContent>
-          </div>
-          <div class="au-o-grid__item au-u-1-2@medium">
-            <div class="au-c-image au-c-image--transparent">
-              <img src="/assets/images/toevla-mockup.png" alt="Overzicht van de widget met een detail van parkeren en een foto waarop je de ingang ziet van een gebouw.">
-            </div>
-          </div>
-        </div>
-        <hr class="au-c-hr au-c-hr--huge">
-        <div class="au-o-grid au-o-grid--middle au-o-grid--reverse">
-          <div class="au-o-grid__item au-u-1-2@medium">
-            <AuContent @skin="large">
-              <h2 class="au-c-heading au-c-heading--3">Drie stappen en klaar</h2>
+              <h2 class="au-c-heading au-c-heading--3">Met welke instrumenten doen we dat?</h2>
+              <p class="au-u-margin-top-small">Sedert 2010 ondernamen we verschillende initiateven rond toegankelijkheidsinformatie over gebouwen en andere locaties:</p>
               <ul class="au-u-margin-top-small">
-                <li>Het museum verzamelt via een handige invoerapp hun toegankelijkheidsinformatie;</li>
-                <li>Deze informatie komt in de Toegankelijkheidswijzer;</li>
-                <li>Het museum integreert de Toegankelijkheidswijzer (gemakkelijk) als widget binnen zijn eigen website;</li>
+                <li><strong>Toevla.be:</strong> De databank <a class="au-c-link" href="https://toevla.vlaanderen.be/publiek/nl/register/start" target="_blank" rel="noopener noreferrer">Toevla.be</a> biedt betrouwbare en volledige informatie over heel wat gebouwen en plaatsen in Vlaanderen, zoals hotels, cultuurcentra, sportcentra en parkeerplaatsen.</li>
+                <li><strong>Toegankelijkheidswijzer:</strong> De <LinkTo @route="widget" class="au-c-link">Toegankelijkheidswijzer</LinkTo> biedt informatie over de toegankelijkheid van musea. De deelnemende musea bieden deze toegankelijkheidsinformatie op hun eigen website aan.</li>
+                <li><strong>IedereenOveral.be:</strong> De webapplicatie <a href="https://iedereen.overal.info/" class="au-c-link"  target="_blank" rel="noopener noreferrer">IedereenOveral</a> biedt overzichtelijke informatie over de toegankelijkheid van restaurants en cafés.</li>
               </ul>
-              <p>Alle informatie over toegankelijkheid staat duidelijk en uniform op de website van alle musea.</p>
-              <p>
-                <LinkTo @route="get-started" class="au-c-button au-c-button--large">
-                  Aan de slag
-                </LinkTo>
-              </p>
+              <p>We streven ernaar om in de komende maanden en jaren alle toegankelijkheidsinformatie te centraliseren binnen de toepassing <strong>IedereenOveral.be</strong>. In een eerstvolgende fase (2024) breiden we deze webapplicatie alvast verder uit met <strong>informatie over publiek sanitair</strong>.</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
@@ -149,7 +121,7 @@
       <div class="au-o-layout au-o-layout--large">
         <AuContent @skin="large" class="au-u-content-center">
           <h2 class="au-c-heading au-c-heading--3">Wie is de uitgever?</h2>
-          <p>De Toegankelijkheidswijzer is een product van Toegankelijk Vlaanderen, een initiatief van de Vlaamse minister van Gelijke Kansen, Bart Somers, in samenwerking met het Agentschap Binnenlands Bestuur en Inter (het Agentschap Toegankelijk Vlaanderen). </p>
+          <p>Toegankelijk Vlaanderen is een initiatief van het Vlaamse gelijkekansenbeleid, in een samenwerking tussen het Agentschap Binnenlands Bestuur en Inter (het Agentschap Toegankelijk Vlaanderen).</p>
         </AuContent>
       </div>
     </section>
