--- a/app/templates/developers/iframe.hbs
+++ b/app/templates/developers/iframe.hbs
@@ -44,4 +44,4 @@
 <p>De link is een combinatie van <CodeInline @code='https://widget.toegankelijk.vlaanderen.be/direct/' @language="html" /> + <strong>de unieke cijfer-letter code</strong>.</p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Als je problemen tegenkomt bij het implementeren van de widget dan kan je ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+<p>Heb je problemen bij het plaatsen van de widget? Stuur dan een e-mail naar <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a> of bel 011 26 50 30 (Inter).</p>
