--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -42,4 +42,4 @@
 <p>Meer info over een correcte <LinkTo @route="developers.plaatsing" class="au-c-link">plaatsing van de widget</LinkTo></p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Als je problemen tegenkomt bij het implementeren van de widget dan kan je ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+<p>Heb je problemen bij het plaatsen van de widget? Stuur dan een e-mail naar <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a> of bel 011 26 50 30 (Inter).</p>
