--- a/app/templates/widget.hbs
+++ b/app/templates/widget.hbs
@@ -9,18 +9,61 @@
         <div class="au-o-grid au-o-grid--middle">
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
-              <AuHeading>Toegankelijkheidswijzer</AuHeading>
+              <AuHeading>De toegankelijkheidswijzer voor musea</AuHeading>
               <p class="au-c-intro">
-                De toegankelijkheidswijzer is een vast informatieblok of 'widget' (met museumdata) dat je makkelijk kan integreren in een website. Bezoekers zien steeds de meest actuele toegankelijkheidsinformatie.
+                De Toegankelijkheidswijzer zorgt ervoor dat musea toegankelijkheidsinformatie over hun locatie en hun tentoonstellingen helder en herkenbaar kunnen presenteren op hun eigen website.
               </p>
-              <h2 class="au-c-heading au-c-heading--3">Wat is een widget?</h2>
-              <p>Een widget is een informatieblok dat je kan tonen op je website. In onze toepassing bevat dit blok toegankelijkheidsinformatie. De widget is het resultaat van de data die worden ingegeven in de invoerapplicatie. Dankzij de widget wordt toegankelijkheidsinformatie van verschillende publieke locaties op dezelfde uniforme manier ontsloten.</p>
-              <p>Belangrijk is dat we informatie kunnen geven voor iedereen, dat het essentiële, overzichtelijke informatie is en dat we een positieve boodschap kunnen meegeven. Naast die knelpunten die mensen met een beperking beter op voorhand kennen, leggen we volop de aandacht op de toegankelijkheidstroeven van het museum.</p>
+              <p>
+                De Gentse stadsmusea en historische huizen, en een beperkt aantal Vlaamse musea namen van bij de start deel aan de ontwikkeling van dit project. Deze musea delen hun toegankelijkheidsinformatie via de Toegankelijkheidswijzer al op hun website. Wil je weten over welke musea het gaat? <LinkTo class="au-c-link" @route="buildings">Een overzicht staat op de pagina gebouwen.</LinkTo>
+              </p>
+              <p><strong>Vanaf nu kunnen ook alle andere Vlaamse musea zich inschrijven op de Toegankelijkheidswijzer.</strong> Wil je inzetten op toegankelijkheid? Wil je de bezoekers van jouw museum zo goed mogelijk informeren? <LinkTo class="au-c-link" @route="get-started">Stel je dan kandidaat.</LinkTo></p>
             </AuContent>
           </div>
-          <div class="au-o-grid__item au-u-1-2@medium au-u-visible-medium-up">
+          <div class="au-o-grid__item au-u-1-2@medium">
             <div class="au-c-image au-c-image--transparent">
-              <img src="/assets/images/roadmap.svg" alt="Illustratie van een smartphone waar meerdere mensen tegelijk blokjes toevoegen aan een applicatie op het scherm">
+              <img src="/assets/images/toevla-mockup.png" alt="Overzicht van de widget met een detail van parkeren en een foto waarop je de ingang ziet van een gebouw.">
+            </div>
+          </div>
+        </div>
+        <hr class="au-c-hr au-c-hr--huge">
+        <div class="au-o-grid au-o-grid--reverse au-o-grid--middle">
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <AuContent @skin="large">
+              <h2 class="au-c-heading au-c-heading--3">Toegankelijkheidsinfo via een widget</h2>
+              <p class="au-u-margin-top-small">De toegankelijkheidswijzer is een vast informatieblok of 'widget' met museumdata dat je eenvoudig kan integreren in een website. Bezoekers zien altijd de meest actuele toegankelijkheidsinformatie.</p>
+              <h3 class="au-c-heading au-c-heading--4">Wat is een widget? </h3>
+              <p class="au-u-margin-top-small">Een widget is een informatieblok op je website. In het geval van de toegankelijkheidswijzer bevat dit blok informatie over toegankelijkheid. De widget wordt samengesteld op basis van de gegevens die de verantwoordelijke van het museum zelf invoert. Dankzij de widget wordt toegankelijkheidsinformatie van verschillende publieke locaties op dezelfde consistente manier gepresenteerd.</p>
+              <p>Het is belangrijk dat we informatie kunnen geven die voor iedereen een meerwaarde heeft. Naast het benoemen van mogelijke knelpunten die mensen met een beperking best op voorhand kennen, is er ook volop aandacht voor de toegankelijkheidstroeven van het museum.</p>
+            </AuContent>
+          </div>
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <div class="au-c-youtube-holder">
+              <iframe src="https://www.youtube.com/embed/o9xIJ5qeCjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p class="au-c-youtube-holder-caption"><LinkTo @route="transcript" class="au-c-link">Lees het tekst transcript van deze video</LinkTo></p>
+          </div>
+        </div>
+        <hr class="au-c-hr au-c-hr--huge">
+        <div class="au-o-grid au-o-grid--middle">
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <AuContent @skin="large">
+              <h2 class="au-c-heading au-c-heading--3">Drie stappen en klaar</h2>
+              <ul class="au-u-margin-top-small">
+                <li>Het museum verzamelt via een handige invoerapp hun toegankelijkheidsinformatie;</li>
+                <li>Deze informatie komt in de Toegankelijkheidswijzer;</li>
+                <li>Het museum integreert de Toegankelijkheidswijzer (gemakkelijk) als widget binnen zijn eigen website;</li>
+              </ul>
+              <p>Alle informatie over toegankelijkheid staat duidelijk en uniform op de website van alle musea.</p>
+              <p>
+                <LinkTo @route="get-started" class="au-c-button au-c-button--large">
+                  Aan de slag
+                </LinkTo>
+              </p>
+            </AuContent>
+          </div>
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <div class="au-c-image au-c-image--transparent">
+              <img src="/assets/images/toevla-start.svg" alt="Illustratie van een vrouw die bij een locatie zit.">
             </div>
           </div>
         </div>
