copy changes, add flyer download

--- a/app/templates/get-started.hbs
+++ b/app/templates/get-started.hbs
@@ -28,22 +28,24 @@
         <AuContent @skin="large" class="au-u-margin-bottom">
           <h2 class="au-c-heading au-c-heading--3">Een toegankelijkheidswijzer op jouw eigen museumwebsite?</h2>
           <p>Welke stappen moet ik doorlopen? Wat is nodig om een widget te tonen op mijn website? Hoe ga ik aan de slag?</p>
+          <p>Bekijk de flyer voor <a href="/Toegankelijkheidswijzer_Flyer-Inter_2024.pdf" download="Toegankelijkheidswijzer-Flyer-2024.pdf" type="application/pdf" target="_blank" rel="noopener noreferrer" class="au-c-link">meer informatie over de kostprijs en de mogelijkheden</a>.</p>
           <ol class="au-c-numbered-list">
             <li class="au-c-numbered-list__item">
               <p><strong>Stap 1</strong> - Schrijf je museum in.</p>
               <ul>
-                <li>Vul het <AuLink @linkRoute="subscribe">Inschrijfformulier</AuLink> in en geef aan waarom de toegankelijkheid van jouw museum in de kijker moet staan.</li>
+                <li>Vul het <AuLink @linkRoute="subscribe">Inschrijfformulier</AuLink> in.</li>
               </ul>
             </li>
             <li class="au-c-numbered-list__item">
               <p><strong>Stap 2</strong> - Verzamel informatie en voer die in</p>
+              <p class="au-u-margin-top-small">Je kan dit als museum helemaal zelf!</p>
               <p class="au-u-margin-top-small">De museumverantwoordelijke:</p>
               <ul>
-                <li>verzamelt de toegankelijkheidsdata met behulp van <a class="au-c-link" href="https://assets.vlaanderen.be/image/upload/v1709550607/toegankelijkheidswijzer_DEF_zonder_jaarlijkse_bijdrage_quz4vj.pdf" target="_blank" rel="noreferrer noopener">een praktische online handleiding.</a></li>
+                <li>verzamelt de toegankelijkheidsdata met behulp van een praktische online handleiding.</li>
                 <li>voert de toegankelijkheidsdata in.</li>
                 <li>bevestigt via mail aan Inter dat het dossier klaar is om na te kijken.</li>
-                <li>Inter controleert de ingevoerde data en werkt het dossier af.</li>
               </ul>
+              <p class="au-u-margin-top-small">Inter controleert de ingevoerde data en werkt het dossier af.</p>
             </li>
             <li class="au-c-numbered-list__item">
               <p><strong>Stap 3</strong> - Online tonen van de widget</p>
