--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,7 +10,7 @@
           <div class="au-o-grid__item au-u-2-4@medium au-c-hero__usp au-c-content au-c-content--large">
             <AuHeading @skin="1" class="au-u-margin-bottom">Wat is Toegankelijk Vlaanderen?</AuHeading>
             <p class="au-c-intro au-u-margin-bottom">
-              Toegankelijk Vlaanderen is een initiatief van de Vlaamse overheid. Het stuurt iedereen, met en zonder beperking, geïnformeerd en met een gerust hart op pad in heel Vlaanderen.
+              Toegankelijk Vlaanderen is een project van de Vlaamse overheid. Het stuurt iedereen, met en zonder beperking, geïnformeerd en gerust op pad in heel Vlaanderen.
             </p>
             <p class="au-c-para au-u-margin-top">
               <LinkTo @route="get-started" class="au-c-button au-c-button--large au-u-margin-bottom-small">
@@ -78,20 +78,21 @@
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Hoe doen we dat?</h2>
               <p class="au-u-margin-top-small">
-                We verzamelen informatie over de toegankelijkheid van openbare locaties.
+                We verzamelen informatie over de toegankelijkheid van openbare plaatsen.
               </p>
               <p>Zo:</p>
               <ul class="au-u-margin-top-small">
-                <li>informeren we mensen met een beperking en hun entourage;</li>
+                <li>informeren we mensen met een beperking en hun omgeving;</li>
                 <li>creëren we bewustzijn over toegankelijkheid bij het grote publiek;</li>
-                <li>bieden we beleidsmakers inzicht in de knelpunten op het gebied van toegankelijkheid;</li>
-                <li>moedigen we mensen aan om de kwaliteit van de toegankelijkheid in openbare locaties te verbeteren.</li>
+                <li>bieden we beleidsmakers inzicht in de knelpunten op het gebied van toegankelijkheid; </li>
+                <li>moedigen we mensen aan om de kwaliteit van de toegankelijkheid in openbare plaatsen te verbeteren.</li>
               </ul>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
             <div class="au-c-image au-c-image--transparent">
-              <img src="/assets/images/roadmap.svg" alt="Illustratie van een smartphone waar meerdere mensen tegelijk blokjes toevoegen aan een applicatie op het scherm">            </div>
+              <img src="/assets/images/roadmap.svg" alt="Illustratie van een smartphone waar meerdere mensen tegelijk blokjes toevoegen aan een applicatie op het scherm">
+            </div>
           </div>
         </div>
         <hr class="au-c-hr au-c-hr--huge">
@@ -99,13 +100,13 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Met welke instrumenten doen we dat?</h2>
-              <p class="au-u-margin-top-small">Sedert 2010 ondernamen we verschillende initiateven rond toegankelijkheidsinformatie over gebouwen en andere locaties:</p>
+              <p class="au-u-margin-top-small">Sinds 2010 ondernamen we verschillende initiatieven rond toegankelijkheidsinformatie over gebouwen en andere plaatsen:</p>
               <ul class="au-u-margin-top-small">
-                <li><strong>Toevla.be:</strong> De databank <a class="au-c-link" href="https://toevla.vlaanderen.be/publiek/nl/register/start" target="_blank" rel="noopener noreferrer">Toevla.be</a> biedt betrouwbare en volledige informatie over heel wat gebouwen en plaatsen in Vlaanderen, zoals hotels, cultuurcentra, sportcentra en parkeerplaatsen.</li>
-                <li><strong>Toegankelijkheidswijzer:</strong> De <LinkTo @route="widget" class="au-c-link">Toegankelijkheidswijzer</LinkTo> biedt informatie over de toegankelijkheid van musea. De deelnemende musea bieden deze toegankelijkheidsinformatie op hun eigen website aan.</li>
-                <li><strong>IedereenOveral.be:</strong> De webapplicatie <a href="https://iedereen.overal.info/" class="au-c-link"  target="_blank" rel="noopener noreferrer">IedereenOveral</a> biedt overzichtelijke informatie over de toegankelijkheid van restaurants en cafés.</li>
+                <li><strong>Toevla.be:</strong> Op de databank <a class="au-c-link" href="https://toevla.vlaanderen.be/publiek/nl/register/start" target="_blank" rel="noopener noreferrer">Toevla.be</a> vind je betrouwbare en volledige informatie over heel wat gebouwen en plaatsen in Vlaanderen, zoals hotels, cultuurcentra, sportcentra en parkeerplaatsen.</li>
+                <li><strong>Toegankelijkheidswijzer:</strong> Op de <LinkTo @route="widget" class="au-c-link">Toegankelijkheidswijzer</LinkTo> staat informatie over de toegankelijkheid van musea. De deelnemende musea bieden deze toegankelijkheidsinformatie op hun eigen website aan.</li>
+                <li><strong>IedereenOveral.be:</strong> Op de  webapplicatie <a href="https://iedereen.overal.info/" class="au-c-link"  target="_blank" rel="noopener noreferrer">IedereenOveral</a> lees je informatie over de toegankelijkheid van restaurants en cafés.</li>
               </ul>
-              <p>We streven ernaar om in de komende maanden en jaren alle toegankelijkheidsinformatie te centraliseren binnen de toepassing <strong>IedereenOveral.be</strong>. In een eerstvolgende fase (2024) breiden we deze webapplicatie alvast verder uit met <strong>informatie over publiek sanitair</strong>.</p>
+              <p>We willen in de komende maanden en jaren alle toegankelijkheidsinformatie samenbrengen op <a href="https://iedereen.overal.info/" class="au-c-link"  target="_blank" rel="noopener noreferrer">IedereenOveral.be</a>. Als eerste breiden we deze webapplicatie verder uit met <strong>informatie over publiek sanitair</strong>.</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
@@ -121,7 +122,7 @@
       <div class="au-o-layout au-o-layout--large">
         <AuContent @skin="large" class="au-u-content-center">
           <h2 class="au-c-heading au-c-heading--3">Wie is de uitgever?</h2>
-          <p>Toegankelijk Vlaanderen is een initiatief van het Vlaamse gelijkekansenbeleid, in een samenwerking tussen het Agentschap Binnenlands Bestuur en Inter (het Agentschap Toegankelijk Vlaanderen).</p>
+          <p>Toegankelijk Vlaanderen is een project van het Vlaamse gelijkekansenbeleid, in een samenwerking tussen het Agentschap Binnenlands Bestuur en Inter (het Agentschap Toegankelijk Vlaanderen).</p>
         </AuContent>
       </div>
     </section>
