--- a/app/templates/widget.hbs
+++ b/app/templates/widget.hbs
@@ -16,7 +16,7 @@
               <p>
                 De Gentse stadsmusea en historische huizen, en een beperkt aantal Vlaamse musea namen van bij de start deel aan de ontwikkeling van dit project. Deze musea delen hun toegankelijkheidsinformatie via de Toegankelijkheidswijzer al op hun website. Wil je weten over welke musea het gaat? <LinkTo class="au-c-link" @route="buildings">Een overzicht staat op de pagina gebouwen.</LinkTo>
               </p>
-              <p><strong>Vanaf nu kunnen ook alle andere Vlaamse musea zich inschrijven op de Toegankelijkheidswijzer.</strong> Wil je inzetten op toegankelijkheid? Wil je de bezoekers van jouw museum zo goed mogelijk informeren? <LinkTo class="au-c-link" @route="get-started">Stel je dan kandidaat.</LinkTo></p>
+              <p><strong>Vanaf nu kunnen alle Vlaamse musea zich inschrijven op de Toegankelijkheidswijzer.</strong> Wil je inzetten op toegankelijkheid? Wil je de bezoekers van jouw museum zo goed mogelijk informeren? <LinkTo class="au-c-link" @route="get-started">Stel je dan kandidaat.</LinkTo></p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
@@ -30,10 +30,10 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Toegankelijkheidsinfo via een widget</h2>
-              <p class="au-u-margin-top-small">De toegankelijkheidswijzer is een vast informatieblok of 'widget' met museumdata dat je eenvoudig kan integreren in een website. Bezoekers zien altijd de meest actuele toegankelijkheidsinformatie.</p>
+              <p class="au-u-margin-top-small">De toegankelijkheidswijzer is een vast informatieblok of 'widget' met museumdata dat je eenvoudig kan plaatsen in een website. Bezoekers zien altijd de laatste nieuwe toegankelijkheidsinformatie.</p>
               <h3 class="au-c-heading au-c-heading--4">Wat is een widget? </h3>
-              <p class="au-u-margin-top-small">Een widget is een informatieblok op je website. In het geval van de toegankelijkheidswijzer bevat dit blok informatie over toegankelijkheid. De widget wordt samengesteld op basis van de gegevens die de verantwoordelijke van het museum zelf invoert. Dankzij de widget wordt toegankelijkheidsinformatie van verschillende publieke locaties op dezelfde consistente manier gepresenteerd.</p>
-              <p>Het is belangrijk dat we informatie kunnen geven die voor iedereen een meerwaarde heeft. Naast het benoemen van mogelijke knelpunten die mensen met een beperking best op voorhand kennen, is er ook volop aandacht voor de toegankelijkheidstroeven van het museum.</p>
+              <p class="au-u-margin-top-small">Een widget is een informatieblok op je website. In het geval van de toegankelijkheidswijzer bevat dit blok informatie over toegankelijkheid. De widget wordt samengesteld op basis van de gegevens die de verantwoordelijke van het museum zelf invoert. Dankzij de widget wordt toegankelijkheidsinformatie van verschillende publieke plaatsen op dezelfde manier gepresenteerd.</p>
+              <p>Het is belangrijk dat de informatie voor iedereen een meerwaarde heeft. Naast mogelijke knelpunten die mensen met een beperking best op voorhand kennen, is er ook aandacht voor de pluspunten van het museum.</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
